[gd_scene load_steps=9 format=2]

[ext_resource path="res://Font/Typori_Paragraph.tres" type="DynamicFont" id=1]
[ext_resource path="res://Font/Typpori_Search.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scene/Home/Field.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scene/Home.gd" type="Script" id=4]
[ext_resource path="res://Theme/main_theme.tres" type="Theme" id=5]
[ext_resource path="res://Scene/GradientBackground.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scene/SearchResults.gd" type="Script" id=7]
[ext_resource path="res://Scene/Home/Topic.tscn" type="PackedScene" id=8]

[node name="SearchResults" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gradient_background" parent="." instance=ExtResource( 6 )]
position = Vector2( -50.8542, -42.3785 )

[node name="Home" type="MarginContainer" parent="."]
margin_right = 680.0
margin_bottom = 920.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="VBoxContainer" parent="Home"]
margin_right = 680.0
margin_bottom = 920.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SearchBar" type="HBoxContainer" parent="Home/Body"]
self_modulate = Color( 0.0666667, 0.541176, 0.698039, 1 )
margin_right = 680.0
margin_bottom = 58.0
rect_clip_content = true
custom_constants/separation = 8

[node name="Home" type="Button" parent="Home/Body/SearchBar"]
margin_right = 58.0
margin_bottom = 58.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.027451, 0.231373, 0.298039, 1 )
text = "Home"

[node name="TextEdit" type="LineEdit" parent="Home/Body/SearchBar"]
self_modulate = Color( 0.0666667, 0.541176, 0.698039, 1 )
margin_left = 66.0
margin_right = 598.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GME YEETed or Beated?"
placeholder_text = "Search here"
placeholder_alpha = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Search" type="Button" parent="Home/Body/SearchBar"]
margin_left = 606.0
margin_right = 680.0
margin_bottom = 58.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.027451, 0.231373, 0.298039, 1 )
text = "Search!"

[node name="Stonks" type="ScrollContainer" parent="Home/Body"]
margin_top = 74.0
margin_right = 680.0
margin_bottom = 920.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Topic" parent="Home/Body/Stonks" instance=ExtResource( 8 )]
margin_top = 0.0
margin_bottom = 2222.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Field3" parent="Home/Body/Stonks/Topic" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 318.0
margin_right = 680.0
margin_bottom = 382.0

[node name="Field4" parent="Home/Body/Stonks/Topic" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 410.0
margin_right = 680.0
margin_bottom = 474.0

[node name="Field5" parent="Home/Body/Stonks/Topic" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 502.0
margin_right = 680.0
margin_bottom = 566.0

[node name="Field6" parent="Home/Body/Stonks/Topic" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 594.0
margin_right = 680.0
margin_bottom = 658.0

[node name="Field7" parent="Home/Body/Stonks/Topic" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 686.0
margin_right = 680.0
margin_bottom = 750.0

[node name="Field8" parent="Home/Body/Stonks/Topic" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 778.0
margin_right = 680.0
margin_bottom = 842.0

[node name="Field9" parent="Home/Body/Stonks/Topic" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 870.0
margin_right = 680.0
margin_bottom = 934.0

[node name="Field10" parent="Home/Body/Stonks/Topic" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 962.0
margin_right = 680.0
margin_bottom = 1026.0

[node name="Field11" parent="Home/Body/Stonks/Topic" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 1054.0
margin_right = 680.0
margin_bottom = 1118.0

[node name="Field12" parent="Home/Body/Stonks/Topic" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 1146.0
margin_right = 680.0
margin_bottom = 1210.0

[node name="Field13" parent="Home/Body/Stonks/Topic" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 1238.0
margin_right = 680.0
margin_bottom = 1302.0

[node name="Field14" parent="Home/Body/Stonks/Topic" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 1330.0
margin_right = 680.0
margin_bottom = 1394.0

[node name="Field15" parent="Home/Body/Stonks/Topic" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 1422.0
margin_right = 680.0
margin_bottom = 1486.0

[node name="Field16" parent="Home/Body/Stonks/Topic" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 1514.0
margin_right = 680.0
margin_bottom = 1578.0

[node name="Field17" parent="Home/Body/Stonks/Topic" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 1606.0
margin_right = 680.0
margin_bottom = 1670.0

[node name="Field18" parent="Home/Body/Stonks/Topic" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 1698.0
margin_right = 680.0
margin_bottom = 1762.0

[node name="Field19" parent="Home/Body/Stonks/Topic" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 1790.0
margin_right = 680.0
margin_bottom = 1854.0

[node name="Field20" parent="Home/Body/Stonks/Topic" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 1882.0
margin_right = 680.0
margin_bottom = 1946.0

[node name="Field21" parent="Home/Body/Stonks/Topic" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 1974.0
margin_right = 680.0
margin_bottom = 2038.0

[node name="Field22" parent="Home/Body/Stonks/Topic" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 2066.0
margin_right = 680.0
margin_bottom = 2130.0

[node name="Field23" parent="Home/Body/Stonks/Topic" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 2158.0
margin_right = 680.0
margin_bottom = 2222.0
[connection signal="button_up" from="Home/Body/SearchBar/Home" to="." method="_on_Home_button_up"]
[connection signal="button_up" from="Home/Body/SearchBar/Search" to="Home" method="_on_Search_button_up"]

[editable path="Home/Body/Stonks/Topic"]
